--- a/wiki/HowToUse.wiki
+++ b/wiki/HowToUse.wiki
@@ -5,7 +5,7 @@ The fastest way to test PixFC and include it in your application is to:
  * [HowToUse#Download_PixFC Download the PixFC binaries]
  * [HowToUse#Include_PixFC_in_your_project Include PixFC in your project]
 
-Instead of downloading the pre-built binaries, you can also download the source code and [HowToUse#Build_PixFC yourself] (longer).
+Instead of downloading the pre-built binaries, you can also download the source code and [HowToUse#Build_PixFC build PixFC yourself] (longer).
  
 = Download PixFC=
 
@@ -24,7 +24,7 @@ Next, `#include "pixfc-sse.h"` where appropriate (so you can call PixFC function
 
 Take a look at `pixfc/example.c` for a concrete example.
 
-Last, link the PixFC static library (`pixfc/libpixfc-sse.a` on Mac & Linux, `pixfc/pixfc-sse.lib` on Windwos) to your application. On Linux, also link your application against librt by passing -lrt to the linker.
+Last, link the PixFC static library (`pixfc/libpixfc-sse.a` on Mac & Linux, `pixfc/pixfc-sse.lib` on Windows) to your application. On Linux, also link your application against librt by passing `-lrt` to the linker.
 That's it !.
 
 
