--- a/trunk/TODO
+++ b/trunk/TODO
@@ -1,5 +1,7 @@
 PixFC-SSE TODO list:
 
+* Fix segfault happening when using unaligned buffer with some conversion routines
+* Add aligned / unaligned use cases to unit testing
 * Investigate where to place prefetching instructions and check its 
   platform dependency
 * Investigate if using static xmm intermediate buffers instead of 
