--- a/trunk/Changelog
+++ b/trunk/Changelog
@@ -1,3 +1,6 @@
+v0.3:
+ - Added conversion to / from YUV420P
+
 v0.2:
  - Added conversion to / from YUV422P
  - Improved performance of SSE conversions across supported platforms
