--- a/trunk/TODO
+++ b/trunk/TODO
@@ -1,19 +1,15 @@
 PixFC-SSE TODO list:
 
-* use PALIGNR in up/downsampling code
+* optimise yuv_to_rgb inline (use 8-bit left shifted coefs where possible) 
 * Investigate if 8-bit left-shifted coefficients can be used and whether they 
   provide acceptable results for yuv to rgb inlines
-* Add aligned / unaligned use cases to unit testing
 * Investigate where to place prefetching instructions and check its 
   platform dependency
-* Investigate if using static xmm intermediate buffers instead of 
-  stack-allocated ones significantly improves conversion performance.
 * Update non-SSE conversion routines to perform resampling.
 * Add support for more pixel formats:
   - VYUY, YVYU
-  - planar formats (YUV420, YVU420, YUV410, YVU410)
+  - planar formats (YUV410, YVU410)
   - packed RGB, grey and bayer formats.
-* Hide internal functions so as not to pollute the namespace
 * Improve perf by distributing conversion over many threads (OpenMP)
 * Add SSE4.1 version of routines which use blending (up/down sampling for 
   instance)
