--- a/wiki/ConversionTiming.wiki
+++ b/wiki/ConversionTiming.wiki
@@ -1,14 +1,20 @@
 #summary what conversions are supported and how fast is PixFC
 #labels Featured
 
-PixFC-SSe has been tested on Windows, Linux and Mac OSX with the following CPUs:
+== Hardware platforms ==
+PixFC-SSe has been tested on Windows, Linux and Mac OSX on the following platforms:
  * [http://pixfc-sse.googlecode.com/svn/trunk/perf-results/i5-details.txt Intel Core i5 760 2.8 GHz]
  * [http://pixfc-sse.googlecode.com/svn/trunk/perf-results/xeon-details.txt Quad core Xeon W3520 2.67 GHz]
 
-The current list of supported conversions and timing information for each OS / arch can be found here:
+Click on the above links for more information on the CPU and compiler on each platform.
+
+== Conversion timings ==
+The current list of supported conversions and timing information for each OS / platform can be found here:
 
 || OS || CPU || link ||
 || Linux || i5 || http://pixfc-sse.googlecode.com/svn/trunk/perf-results/i5-linux.txt ||
 || Linux || Xeon || http://pixfc-sse.googlecode.com/svn/trunk/perf-results/xeon-linux.txt ||
 || OSX || Xeon ||  http://pixfc-sse.googlecode.com/svn/trunk/perf-results/xeon-osx.txt ||
 || Windows  || i5 || http://pixfc-sse.googlecode.com/svn/trunk/perf-results/i5-win7.txt ||
+
+The above pages show the average conversion time in milliseconds, obtained by running each conversion 100 times with a different input buffer each time. The average time spent in user-space, kernel space and the total number of context switches are also mentioned.
