Edited wiki page ConversionTiming through web user interface.

--- a/wiki/ConversionTiming.wiki
+++ b/wiki/ConversionTiming.wiki
@@ -1,5 +1,6 @@
 #summary what conversions are supported and how fast is PixFC
 #labels Featured
+#sidebar PixFCSideBar
 
 == Hardware platforms ==
 PixFC-SSe has been tested on Windows, Linux and Mac OSX on the following platforms:
