Edited wiki page PixFCSideBar through web user interface.

--- a/wiki/PixFCSideBar.wiki
+++ b/wiki/PixFCSideBar.wiki
@@ -1,6 +1,6 @@
 #summary SideBar for PixFC's wiki.
 
- * [HowToUse How to get started with PixFC]
- * [ConversionTiming How fat is PixFC]
+ * [HowToUse Getting started with PixFC]
+ * [ConversionTiming How fast is PixFC]
  * [GettingHelp Getting help with PixFC]
  * [BuildingPixFC Building PixFC]
