trunk: updated Changelog, README, example.c and i5 win 7 perf in preparation for 0.4 release

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+v0.4:
+ - Added conversion to / from v210
+ - Added non-SSE avergage resampling conversions 
+ - Fix all broken conversions
+ - Added inline and conversion blocks unit testing framework
+
 v0.3:
  - Added conversion to / from YUV420P
 
