Edited wiki page ConversionTiming through web user interface.

--- a/wiki/ConversionTiming.wiki
+++ b/wiki/ConversionTiming.wiki
@@ -3,7 +3,7 @@
 #sidebar PixFCSideBar
 
 == Hardware platforms ==
-PixFC-SSe has been tested on Windows, Linux and Mac OSX on the following platforms:
+PixFC-SSE has been tested on Windows, Linux and Mac OSX on the following platforms:
  * [http://pixfc-sse.googlecode.com/svn/trunk/perf-results/i5-details.txt Intel Core i5 760 2.8 GHz]
  * [http://pixfc-sse.googlecode.com/svn/trunk/perf-results/xeon-details.txt Quad core Xeon W3520 2.67 GHz]
 
@@ -18,4 +18,4 @@ The current list of supported conversions and timing information for each OS / p
 || OSX || Xeon ||  http://pixfc-sse.googlecode.com/svn/trunk/perf-results/xeon-osx.txt ||
 || Windows  || i5 || http://pixfc-sse.googlecode.com/svn/trunk/perf-results/i5-win7.txt ||
 
-The above pages show the average conversion time in milliseconds, obtained by running each conversion 100 times with a different input buffer each time. The average time spent in user-space, kernel space and the total number of context switches are also mentioned.
+The above pages show the average conversion time in milliseconds, obtained by running each conversion 100 times with a different 1920x1080 input buffer each time. The average time spent in user-space, kernel space and the total number of context switches are also mentioned.
